Fix icon gaps

--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -498,7 +498,6 @@
   justify-content: space-between;
   align-items: center;
   display: flex;
-  gap: 18px;
   margin-top: 16px !important;
   padding: 0 20px;
 }
